# schwab-py-skills

./: .gitignore  AGENTS.md  HANDOFF.md  README.md  SKILLS_INVENTORY.md  pyproject.toml
.codex/skills/schwab-auth-client/: SKILL.md
.codex/skills/schwab-market-data/: SKILL.md
.codex/skills/schwab-orders/: SKILL.md
.codex/skills/schwab-portfolio/: SKILL.md
.codex/skills/schwab-setup/: SKILL.md
.codex/skills/schwab-streaming/: SKILL.md
demos/schwab-codex-live-demo/: README.md  app.js  index.html  server.py  start-demo.ps1  stop-demo.ps1
demos/schwab-codex-ops-console/: README.md  app.js  index.html  start-demo.ps1  stop-demo.ps1  styles.css
docs/: CODEX_SKILL_USAGE.md  DEPLOYMENT.md  ORDER_STRATEGY_EXAMPLES.md
scripts/: _path.py  build_equity_order.py  build_option_order.py  build_spread_order.py  build_strategy_order.py  cancel_order.py  check_auth.py  deploy-skills.ps1  get_instruments.py  get_market_hours.py  get_movers.py  get_option_chain.py  get_option_expirations.py  get_order.py  get_orders.py  get_portfolio.py  get_price_history.py  get_quotes.py  get_transactions.py  get_user_preferences.py  place_order.py  preview_order.py  replace_order.py  stream_quotes.py  token_info.py
src/schwab_py_skills/: __init__.py  client.py  datetime_utils.py  enums.py  env.py  market.py  portfolio.py  setup_env.py  streaming.py  token_info.py
src/schwab_py_skills/orders/: __init__.py  builder.py  executor.py  schemas.py  (+2 more)
tests/: test_env.py  test_executor.py  test_market_portfolio.py  test_orders.py  test_setup_env.py  test_streaming.py  test_token_info.py
